--- a/lang/ruby18-base/Makefile
+++ b/lang/ruby18-base/Makefile
@@ -1,11 +1,11 @@
-# $NetBSD: Makefile,v 1.53 2010/01/10 15:33:28 taca Exp $
+# $NetBSD: Makefile,v 1.54 2010/01/14 15:07:28 taca Exp $
 #
 
 DISTNAME=	${RUBY_DISTNAME}
 PKGNAME=	${RUBY_PKGPREFIX}-base-${RUBY_VERSION_SUFFIX}
 CATEGORIES=	lang ruby
 MASTER_SITES=	${MASTER_SITE_RUBY}
-PKGREVISION=	3
+PKGREVISION=	4
 
 MAINTAINER=	taca@NetBSD.org
 HOMEPAGE=	${RUBY_HOMEPAGE}
@@ -35,7 +35,7 @@ WRKSRC=		${RUBY_WRKSRC}
 
 .if !empty(PKGSRC_COMPILER:Msunpro)
 LIBS.SunOS+=	-B static -lsunmath -B dynamic -lm
-LDFLAGS.SunOS+=	-L${SUNWSPROBASE}/lib -Wl,-R${SUNWSPROBASE}/lib
+LDFLAGS.SunOS+=	-L${SUNWSPROBASE}/lib ${COMPILER_RPATH_FLAG}${SUNWSPROBASE}/lib
 CONFIGURE_ENV+=	LDSHARED="${CC} -G"
 .else
 LIBS.SunOS+=	-lm
